syntax = "proto3";

package user;

option go_package = "shop/backend/user/api/proto/user";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// 用户服务定义
service UserService {
  // 用户认证相关
  rpc Register(RegisterRequest) returns (UserInfo) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Logout(LogoutRequest) returns (google.protobuf.Empty) {}
  rpc RefreshToken(RefreshTokenRequest) returns (TokenResponse) {}

  // 用户信息相关
  rpc GetUserInfo(GetUserInfoRequest) returns (UserInfo) {}
  rpc UpdateUserInfo(UpdateUserInfoRequest) returns (UserInfo) {}
  rpc ChangePassword(ChangePasswordRequest) returns (google.protobuf.Empty) {}

  // 内部服务调用，用于验证用户令牌
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {}
  rpc GetUserByID(GetUserByIDRequest) returns (UserInfo) {}
}

// 注册请求
message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string phone = 4;
}

// 登录请求
message LoginRequest {
  string username = 1;
  string password = 2;
}

// 登录响应
message LoginResponse {
  UserInfo user_info = 1;
  TokenResponse token = 2;
}

// 令牌响应
message TokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3; // 过期时间（秒）
}

// 登出请求
message LogoutRequest { string access_token = 1; }

// 刷新令牌请求
message RefreshTokenRequest { string refresh_token = 1; }

// 获取用户信息请求
message GetUserInfoRequest { int64 user_id = 1; }

// 获取用户信息通过ID请求
message GetUserByIDRequest { int64 user_id = 1; }

// 更新用户信息请求
message UpdateUserInfoRequest {
  int64 user_id = 1;
  optional string nickname = 2;
  optional string avatar = 3;
  optional string email = 4;
  optional string phone = 5;
  optional Gender gender = 6;
  optional google.protobuf.Timestamp birthday = 7;
}

// 性别枚举
enum Gender {
  GENDER_UNKNOWN = 0;
  GENDER_MALE = 1;
  GENDER_FEMALE = 2;
}

// 用户信息
message UserInfo {
  int64 id = 1;
  string username = 2;
  string nickname = 3;
  string avatar = 4;
  string email = 5;
  string phone = 6;
  Gender gender = 7;
  google.protobuf.Timestamp birthday = 8;
  int32 status = 9; // 1: 正常, 2: 禁用
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

// 修改密码请求
message ChangePasswordRequest {
  int64 user_id = 1;
  string old_password = 2;
  string new_password = 3;
}

// 验证令牌请求
message ValidateTokenRequest { string token = 1; }

// 验证令牌响应
message ValidateTokenResponse {
  bool valid = 1;
  int64 user_id = 2;
  repeated string permissions = 3;
}